Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52295

WinRT: Native virtual keyboard misfunctioning on desktop

    XMLWordPrintable

Details

    • WinRT
    • 17d17a5d72d4f98b692c8ab8a7037aa29b503dae

    Description

      Trying to use the virtual keyboard on Surface (Book) is misfunctioning in the latest version.

      How to reproduce:

      • Open Qt Quick Control Gallery and switch to input tab
      • Tap a lineedit

      Expected output:

      • Virtual Keyboard opens

      Actual output:

      • Virtual keyboard tries to open, but as soon as you release the finger, it closes again.

      While the finger is pressed on the line edit, you can actually use the keyboard and type letters. Also, after the keyboard fully opened, move the finger somewhere while keeping it pressed and the keyboard will stay open.

      This does not apply to Windows 10 Mobile

      Attachments

        For Gerrit Dashboard: QTBUG-52295
        # Subject Branch Project Status CR V

        Activity

          People

            mkalinow Maurice Kalinowski
            mkalinow Maurice Kalinowski
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes